# xhs_op

./: .env.example  .gitignore  README.md  USER_MANUAL.md  pyproject.toml
.claude/: settings.local.json
scripts/: login.py  run_dashboard.py  smoke_publish.py
src/xhs_op/: config.py  db.py
src/xhs_op/dashboard/: app.py  seed_demo.py
src/xhs_op/engage/: reply.py
src/xhs_op/generate/: image.py  inspirer.py  llm.py  translator.py
src/xhs_op/generate/personas/: stock_digest.md  stock_hottake.md  villa.md
src/xhs_op/publish/: playwright_fallback.py  xhs_client.py
src/xhs_op/schedule/: cadence.py  jobs.py
src/xhs_op/sources/: rss.py  x_scraper.py  xhs_competitor.py
tests/: verify_task2.py  verify_task3.py
