[project]
name = "xhs-op"
version = "0.1.0"
description = "Semi-automated XHS content engine for Xishuangbanna rentals + stock/AI/crypto digests"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "xhs>=0.2",
    "playwright>=1.50",
    "twikit>=2.0",
    "feedparser>=6.0",
    "litellm>=1.50",
    "google-genai>=0.5",
    "anthropic>=0.40",
    "openai>=1.50",
    "streamlit>=1.40",
    "apscheduler>=3.10",
    "sqlmodel>=0.0.22",
    "pillow>=11.0",
    "httpx[socks]>=0.28",
    "python-dotenv>=1.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "tenacity>=9.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xhs_op"]

[tool.uv]
package = true

[tool.uv.sources]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pyright]
include = ["src", "scripts"]
extraPaths = ["src"]
pythonVersion = "3.13"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
